cmake_minimum_required(VERSION 3.17)
project(linux_system_learn C)

set(CMAKE_C_STANDARD 99)

add_executable(linux_system_learn main.c io/file_io_learn.c io/file_io_learn.h io/standard_io_learn.c io/standard_io_learn.h io/nonblocking_io_learn.c io/nonblocking_io_learn.h io/mmap_learn.c io/mmap_learn.h io/file_system_learn.c io/file_system_learn.h proc/env_learn.c proc/env_learn.h proc/fork_learn.c proc/fork_learn.h proc/pip_learn.c proc/pip_learn.h signal/signal_learn.c signal/mysleep_learn.c terminal/daemon_learn.c thread/thread_learn.c driver/hello.c)
add_executable(socket socket/tcp/server.c)
add_executable(socket_client socket/tcp/client.c)
add_executable(fork_server socket/tcp/fork_server.c)
add_executable(select socket/tcp/select.c)
add_executable(select2 socket/tcp/select2.c)
add_executable(epoll socket/tcp/epoll.c)
add_executable(udp_server socket/udp/udp_server.c)
add_executable(udp_client socket/udp/udp_client.c)
add_executable(broadcast socket/udp/broadcast_client.c)
add_executable(multicast socket/udp/multicast.c)